# faq2html

./: LICENSE  README.md  main.py  pyproject.toml
faq2html/: __init__.py  convert.py  errors.py  generate_html.py  qna.py  read_docx.py
